[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "og-logger"
version = "0.1.2"
description = "Structured JSON logging with async-safe request context for FastAPI/Starlette"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.9"
authors = [
    { name = "Aman Soni", email = "aman.soni@ongrid.in" }
]
keywords = [
    "logging",
    "loguru",
    "fastapi",
    "starlette",
    "json",
    "ecs",
    "structured-logging",
    "request-context",
    "middleware",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: System :: Logging",
    "Typing :: Typed",
    "Private :: Do Not Upload",
]

dependencies = [
    "loguru>=0.7.0",
    "filelock>=3.0.0",
]

[project.optional-dependencies]
middleware = [
    "starlette>=0.20.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "fastapi>=0.100.0",
]

[project.urls]
Homepage = "https://github.com/amansoni-ongrid/og-logger"
Documentation = "https://github.com/amansoni-ongrid/og-logger#readme"
Repository = "https://github.com/amansoni-ongrid/og-logger"
Issues = "https://github.com/amansoni-ongrid/og-logger/issues"

[tool.hatch.build.targets.wheel]
packages = ["og_logger"]

[tool.hatch.build.targets.sdist]
include = [
    "og_logger/*.py",
    "og_logger/py.typed",
    "tests/*.py",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
